@@ -1,6 +1,6 @@
 Package: jagsUI
-Version: 1.4.9
-Date: 2017-12-08
+Version: 1.5.0
+Date: 2018-09-12
 Title: A Wrapper Around 'rjags' to Streamline 'JAGS' Analyses
 Author: Ken Kellner <contact@kenkellner.com>
 Maintainer: Ken Kellner <contact@kenkellner.com>
@@ -12,7 +12,6 @@ Description: A set of wrappers around 'rjags' functions to run Bayesian analyses
 License: GPL-2
 URL: https://github.com/kenkellner/jagsUI
 NeedsCompilation: no
-RoxygenNote: 6.0.1
-Packaged: 2017-12-08 14:31:26 UTC; ken
+Packaged: 2018-09-12 18:00:32 UTC; ken
 Repository: CRAN
-Date/Publication: 2017-12-12 22:37:34 UTC
+Date/Publication: 2018-09-12 22:10:07 UTC
