@@ -1,33 +1,33 @@
-08468494e0264df87f075dade5e4a4a2 *DESCRIPTION
+3549b0c8a0cdb4389aff17a024aa8461 *DESCRIPTION
 9c6ee33d5843b0c526911e33bb3f8e3a *NAMESPACE
-b99ff9ef998c712fb0401e7918775768 *NEWS
-cdfb599c08db23d54a3dfe2510ea58f0 *R/View.R
-8c8cbb4e96815859dafb1606175ceef1 *R/autojags.R
+1584861d5aaf496181f0d657223969ab *NEWS
+5f0f930801b48eb6f9b27eb34e9b4f31 *R/View.R
+075b2df0228ba0e7aafa3783ab5fd0ec *R/autojags.R
 198b41d88f65b07c268a9e9bb6da3ed7 *R/bindmcmc.R
-79327e368bf0caea81b18424406860d7 *R/datacheck.R
+1e9b152f1dc56fd7284ec27841287990 *R/datacheck.R
 64f00fa2c12eb0cc3a8bf94c7d39ebd7 *R/densityplot.R
-41faa3676c8c4e52503180c8f6fa2100 *R/geninits.R
+b89a921bbf7e8fc367593879246c5e44 *R/geninits.R
 e8a3e803c56a7c585a438e793cc44923 *R/getdim.R
-23c5c5c247824b24d551c31634fcfeb8 *R/jags.R
-4e98ac1a23920f7e13c31d947229cb41 *R/jagsbasic.R
-4de66ac37d64eafc5e5884c9fab1bef8 *R/orderparams.R
+9258c48cb57b7954dac1ed2aa7984404 *R/jags.R
+7e9e7d003875fbb5913b4d1460322607 *R/jagsbasic.R
+fc50df0ce284b53608f2a001f5499dd9 *R/orderparams.R
 f7b1dc8b8e7d3d74c6862a6bcc51e52a *R/plot.R
 ac6f0ae941469efd43766f6fac558cf7 *R/populate.R
 bd8ec22208aff51bab89c02557b501ee *R/ppcheck.R
-2766f6a703d9de0e1c290530616eec41 *R/print.R
+f5e198e364ad4a1f6027aa204a2dcb34 *R/print.R
 33f3b922354ac0a24ddfcb74b893a057 *R/processinput.R
-5ffe741254a5fe831414bbc90241344c *R/processoutput.R
+9de734388f318248c753c93a8d8d12d4 *R/processoutput.R
 60eb181d05dea74f4ae27f7e281b3916 *R/runmodel.R
-e7c7bc901e51bc371e6122c90c062bc5 *R/runparallel.R
+331ebfc016717685436ae707844dc96e *R/runparallel.R
 32279dc7a290879ddb543af2073678e0 *R/setfactories.R
 896f8987a003af25077b5a1b8c7a9ec3 *R/setmodules.R
-baf01d91d501c44e79cdd58f3322bacf *R/summary.R
-bc76f8eff942bdc248b8234e81a92ebb *R/summarymatrix.R
+f9f5097739c06d971428b39831778893 *R/summary.R
+b64f66d346d752e4498ee3201f296328 *R/summarymatrix.R
 da101714148e602efebee1060f1702b3 *R/testrhat.R
 c0f39819d8c4c7d6aed9496c47f71d8c *R/traceplot.R
 d19bc3d32e4fb3a74f68605ac2e25b73 *R/translateparams.R
-3b51656d4aba531373ca7dd57819389c *R/update.R
-d6281713069b77b19418bfb855662713 *R/updatebasic.R
+6d5b9f6885b04cc718b2aca532ae7f79 *R/update.R
+759669ee188ae228c40e1d66ba40508f *R/updatebasic.R
 038e0eae9066b4c27b7dcf37d427729f *R/whiskerplot.R
 901aa3c5fda52e8e5c487f95a028b898 *R/xyplot.R
 90886e1b481fb9740427217f0234f4a6 *man/View.Rd
@@ -36,5 +36,5 @@ b7430c621ab3778fb4e187b53ce4f6c8 *man/autojags.Rd
 f3ebc5b6dc5f368094e8095fd78308fd *man/jagsbasic.Rd
 00141e594a859b467f0c4b30f4d1b8cf *man/ppcheck.Rd
 e8352d8d6a92256f4bc324ed5740f737 *man/traceplot.Rd
-4b22c4f414a7534172e9f46387ff3dc4 *man/update.Rd
+fd7272d8ca8e36a8f765a09549ef18da *man/update.Rd
 c31249558a26e7a4cba07435460e425a *man/whiskerplot.Rd
